# rag-llm-app

./: README.md  pyproject.toml
app/: rag_chain.py  server.py
frontend/: package-lock.json  package.json
rag-data-loader/: rag_load_and_process.py
